# rnbo.unity.audioplugin

./: .gitignore  AudioPluginUtil.cpp  AudioPluginUtil.h  CHANGELOG.md  CMakeLists.txt  Doxyfile  Doxyfile.in  Helper.cs.in  README.md
RNBOTypes/: package.json
RNBOTypes/Runtime/: Cycling74.RNBOTypes.asmdef  Cycling74.RNBOTypes.cs
common/: package.json
common/Runtime/: Cycling74.RNBOTypes.asmdef  Cycling74.RNBOTypes.cs  RNBOTypes.cs
docs/: BUFFERS.md  CUSTOM_FILTER.md  GETTING_STARTED.md  GLOBAL_TRANSPORT.md  GUIDE.md  INDEX.md  MESSAGES.md  MIDI.md  PARAMETERS.md  PRESETS.md  README.md  RNBO_IN_UNITY.md  RNBO_SCRIPTING.md  SPATIALISATION_3D_AUDIO.md  TRANSPORT_TEMPO.md
docs/example-patches/: quantized-buffers.maxpat  test-orbs.maxpat
src/: AudioPluginInterface.h  AudioPluginUtil.cpp  AudioPluginUtil.h  Helper.cs.asmdef.in  Helper.cs.in  Plugin.asmdef.in  RNBOWrapper.cpp  package.json.in  plugin.meta.in
